# graphql-generator

./: .gitignore  Cargo.toml  README.md  config.json  go.mod  graphql-generator.conf-prod.json  graphql-generator.conf.json  schema.json
cmd/experimental/: main.go
config/: config.go
crates/graphql-generator-core/: Cargo.toml
crates/graphqlgen/: Cargo.toml
crates/graphqlgen-apollo/: Cargo.toml
crates/graphqlgen/src/: main.rs
crates/graphqlgen/src/config/: config.rs
crates/graphqlgen/src/core/: mod.rs  parse.rs
crates/graphqlgen/src/core/common/: common.rs  lexers.rs  mod.rs  token.rs
crates/graphqlgen/src/core/common/fields/: mod.rs  parse_field_arguments.rs  parse_fields.rs
crates/graphqlgen/src/core/common/parse/: description.rs  directives.rs  expect.rs  mod.rs  type_ref.rs  value.rs
crates/graphqlgen/src/core/document/: enum_def.rs  input.rs  interface.rs  mod.rs  scalar.rs  type_def.rs  union.rs
crates/graphqlgen/src/parsers/: common.rs  lexers.rs  token.rs
crates/graphqlgen/tests/: lexer_test.rs  parse_document_test.rs
crates/graphqlgen_apollo/: Cargo.toml
crates/graphqlgen_schema/: Cargo.toml
data/: required.d.ts
data/templates/: tanstackMutation.ts  tanstackQuery.ts
docs/: schema.json
docs/advanced/: directives.mdx  scalars.mdx
docs/getting-started/: installation.mdx  introduction.mdx
docs/plugins/: overview.mdx  usage.mdx
internal/languages/: language.go  plugin.go
internal/schema/: enums.go  parser.go  raw.go
languages/typescript-build/: blacklists.go  (+5 more)
output/: gpl.d.ts  gpl.ts  index.ts  queries.ts  resources.ts
(+16 files in other folders)
