[package]
name = "graphqlgen"
version = "0.1.0"
edition = "2021"

[dependencies]
graphqlgen_schema = { path = "../graphqlgen_schema" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
clap = { version = "4.5.35" }
clap_derive = "=4.5.32"
anyhow = "1.0.98"
regex = "1.11.1"
